--- a/out-of-state-contribs.ipynb
+++ b/out-of-state-contribs.ipynb
@@ -9,30 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
-     "data": {
-      "application/javascript": [
-       "if (!(\"Notification\" in window)) {\n",
-       "    alert(\"This browser does not support desktop notifications, so the %%notify magic will not work.\");\n",
-       "} else if (Notification.permission !== 'granted' && Notification.permission !== 'denied') {\n",
-       "    Notification.requestPermission(function (permission) {\n",
-       "        if(!('permission' in Notification)) {\n",
-       "            Notification.permission = permission;\n",
-       "        }\n",
-       "    })\n",
-       "}\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The jupyternotify extension is already loaded. To reload it, use:\n",
+      "  %reload_ext jupyternotify\n"
+     ]
     }
    ],
    "source": [
@@ -44,7 +32,7 @@
     "\n",
     "pd.set_option(\"display.max_columns\", 100)\n",
     "pd.set_option(\"display.max_rows\", 500)\n",
-    "pd.options.display.float_format = \"{:.2f}\".format # Suppress scientific notation"
+    "pd.options.display.float_format = \"{:,.2f}\".format # Format floats"
    ]
   },
   {
@@ -101,7 +89,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -190,7 +178,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -270,7 +258,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -456,7 +444,7 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -492,7 +480,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -527,7 +515,7 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -555,7 +543,7 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -648,7 +636,7 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -682,7 +670,7 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -2721,7 +2709,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "scrolled": false
    },
    "outputs": [],
    "source": []
@@ -2730,7 +2719,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "scrolled": false
    },
    "outputs": [],
    "source": []
@@ -2739,7 +2729,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "scrolled": false
    },
    "outputs": [],
    "source": []
@@ -4703,7 +4694,9 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -4831,7 +4824,8 @@
    "cell_type": "code",
    "execution_count": 105,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -5132,7 +5126,8 @@
    "cell_type": "code",
    "execution_count": 112,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "scrolled": false
    },
    "outputs": [],
    "source": [
