--- a/candidates-analysis.ipynb
+++ b/candidates-analysis.ipynb
@@ -40,27 +40,9 @@
     "\n",
     "%load_ext jupyternotify\n",
     "\n",
-    "pd.set_option(\"display.max_columns\", 50)\n",
-    "pd.set_option(\"display.max_rows\", 50)\n",
-    "pd.options.display.float_format = \"{:,.2f}\".format"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Import [National Institute on Money in Politics](https://www.followthemoney.org/) API key."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "nimp_key = open(\"nimp_api_key.txt\", \"r\").readline()"
+    "pd.set_option(\"display.max_columns\", 100)\n",
+    "pd.set_option(\"display.max_rows\", 500)\n",
+    "pd.options.display.float_format = \"{:,.2f}\".format # Format floats"
    ]
   },
   {
@@ -1510,7 +1492,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
