Add analysis by office and party at the state level.

--- a/data-prep.ipynb
+++ b/data-prep.ipynb
@@ -125,7 +125,7 @@
        "            // append a div with our uuid so we can check that it's already\n",
        "            // been sent and avoid duplicates on page reload\n",
        "            var notifiedDiv = document.createElement(\"div\")\n",
-       "            notifiedDiv.id = \"b884c480-4b6e-4cf2-b2db-9e29553ddaf7\"\n",
+       "            notifiedDiv.id = \"08b1c331-8f03-4e8a-af3d-10bd906329da\"\n",
        "            element.append(notifiedDiv)\n",
        "        }\n",
        "\n",
@@ -135,7 +135,7 @@
        "        if (document.readyState === 'complete') {\n",
        "            // check for the div that signifies that the notification\n",
        "            // was already sent\n",
-       "            if (document.getElementById(\"b884c480-4b6e-4cf2-b2db-9e29553ddaf7\") === null) {\n",
+       "            if (document.getElementById(\"08b1c331-8f03-4e8a-af3d-10bd906329da\") === null) {\n",
        "                var notificationPayload = {\"requireInteraction\": false, \"icon\": \"/static/base/images/favicon.ico\", \"body\": \"Cell execution has finished!\"};\n",
        "                if (Notification.permission !== 'denied') {\n",
        "                    if (Notification.permission !== 'granted') { \n",
@@ -321,9 +321,9 @@
      "data": {
       "text/plain": [
        "in_out_state\n",
-       "in-state        7434369\n",
+       "in-state        7434370\n",
        "out-of-state    1230750\n",
-       "unknown          120194\n",
+       "unknown          120193\n",
        "dtype: int64"
       ]
      },
@@ -373,7 +373,7 @@
        "            // append a div with our uuid so we can check that it's already\n",
        "            // been sent and avoid duplicates on page reload\n",
        "            var notifiedDiv = document.createElement(\"div\")\n",
-       "            notifiedDiv.id = \"47e6394c-bea7-4348-9518-b3604f91cccf\"\n",
+       "            notifiedDiv.id = \"58413265-a504-4e25-9a52-ed0cbec4cee4\"\n",
        "            element.append(notifiedDiv)\n",
        "        }\n",
        "\n",
@@ -383,7 +383,7 @@
        "        if (document.readyState === 'complete') {\n",
        "            // check for the div that signifies that the notification\n",
        "            // was already sent\n",
-       "            if (document.getElementById(\"47e6394c-bea7-4348-9518-b3604f91cccf\") === null) {\n",
+       "            if (document.getElementById(\"58413265-a504-4e25-9a52-ed0cbec4cee4\") === null) {\n",
        "                var notificationPayload = {\"requireInteraction\": false, \"icon\": \"/static/base/images/favicon.ico\", \"body\": \"Cell execution has finished!\"};\n",
        "                if (Notification.permission !== 'denied') {\n",
        "                    if (Notification.permission !== 'granted') { \n",
@@ -458,7 +458,7 @@
        "            // append a div with our uuid so we can check that it's already\n",
        "            // been sent and avoid duplicates on page reload\n",
        "            var notifiedDiv = document.createElement(\"div\")\n",
-       "            notifiedDiv.id = \"40b13801-8215-4c7a-92b8-13d1a63b9641\"\n",
+       "            notifiedDiv.id = \"1954d2d8-c253-4971-b22c-2b473a8ce3ca\"\n",
        "            element.append(notifiedDiv)\n",
        "        }\n",
        "\n",
@@ -468,7 +468,7 @@
        "        if (document.readyState === 'complete') {\n",
        "            // check for the div that signifies that the notification\n",
        "            // was already sent\n",
-       "            if (document.getElementById(\"40b13801-8215-4c7a-92b8-13d1a63b9641\") === null) {\n",
+       "            if (document.getElementById(\"1954d2d8-c253-4971-b22c-2b473a8ce3ca\") === null) {\n",
        "                var notificationPayload = {\"requireInteraction\": false, \"icon\": \"/static/base/images/favicon.ico\", \"body\": \"Cell execution has finished!\"};\n",
        "                if (Notification.permission !== 'denied') {\n",
        "                    if (Notification.permission !== 'granted') { \n",
@@ -661,7 +661,7 @@
        "            // append a div with our uuid so we can check that it's already\n",
        "            // been sent and avoid duplicates on page reload\n",
        "            var notifiedDiv = document.createElement(\"div\")\n",
-       "            notifiedDiv.id = \"b3d6b6b0-0504-4b5f-9edd-4bbcfbdb0ab7\"\n",
+       "            notifiedDiv.id = \"030a7f77-1697-4319-87c4-4c93da4c530d\"\n",
        "            element.append(notifiedDiv)\n",
        "        }\n",
        "\n",
@@ -671,7 +671,7 @@
        "        if (document.readyState === 'complete') {\n",
        "            // check for the div that signifies that the notification\n",
        "            // was already sent\n",
-       "            if (document.getElementById(\"b3d6b6b0-0504-4b5f-9edd-4bbcfbdb0ab7\") === null) {\n",
+       "            if (document.getElementById(\"030a7f77-1697-4319-87c4-4c93da4c530d\") === null) {\n",
        "                var notificationPayload = {\"requireInteraction\": false, \"icon\": \"/static/base/images/favicon.ico\", \"body\": \"Cell execution has finished!\"};\n",
        "                if (Notification.permission !== 'denied') {\n",
        "                    if (Notification.permission !== 'granted') { \n",
@@ -1450,7 +1450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1484,7 +1484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {
     "scrolled": true
    },
@@ -1517,7 +1517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {
     "scrolled": true
    },
@@ -2112,7 +2112,7 @@
        "49             N           WY  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2131,7 +2131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "metadata": {
     "scrolled": true
    },
@@ -2183,8 +2183,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
+   "execution_count": 27,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -2253,7 +2255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2323,7 +2325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -2379,7 +2381,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2390,7 +2392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -2446,7 +2448,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2457,7 +2459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2513,7 +2515,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2524,7 +2526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2580,7 +2582,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2598,7 +2600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2655,7 +2657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "metadata": {
     "scrolled": true
    },
@@ -2739,7 +2741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 35,
    "metadata": {
     "scrolled": true
    },
@@ -2753,7 +2755,7 @@
        "            // append a div with our uuid so we can check that it's already\n",
        "            // been sent and avoid duplicates on page reload\n",
        "            var notifiedDiv = document.createElement(\"div\")\n",
-       "            notifiedDiv.id = \"f7481432-a63e-4134-8a85-6c279b703d9d\"\n",
+       "            notifiedDiv.id = \"28351ab2-be41-457c-96f0-aa7aeb173762\"\n",
        "            element.append(notifiedDiv)\n",
        "        }\n",
        "\n",
@@ -2763,7 +2765,7 @@
        "        if (document.readyState === 'complete') {\n",
        "            // check for the div that signifies that the notification\n",
        "            // was already sent\n",
-       "            if (document.getElementById(\"f7481432-a63e-4134-8a85-6c279b703d9d\") === null) {\n",
+       "            if (document.getElementById(\"28351ab2-be41-457c-96f0-aa7aeb173762\") === null) {\n",
        "                var notificationPayload = {\"requireInteraction\": false, \"icon\": \"/static/base/images/favicon.ico\", \"body\": \"Cell execution has finished!\"};\n",
        "                if (Notification.permission !== 'denied') {\n",
        "                    if (Notification.permission !== 'granted') { \n",
