--- a/national-analysis.ipynb
+++ b/national-analysis.ipynb
@@ -11,30 +11,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
-     "data": {
-      "application/javascript": [
-       "if (!(\"Notification\" in window)) {\n",
-       "    alert(\"This browser does not support desktop notifications, so the %%notify magic will not work.\");\n",
-       "} else if (Notification.permission !== 'granted' && Notification.permission !== 'denied') {\n",
-       "    Notification.requestPermission(function (permission) {\n",
-       "        if(!('permission' in Notification)) {\n",
-       "            Notification.permission = permission;\n",
-       "        }\n",
-       "    })\n",
-       "}\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The jupyternotify extension is already loaded. To reload it, use:\n",
+      "  %reload_ext jupyternotify\n"
+     ]
     }
    ],
    "source": [
@@ -57,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {
     "scrolled": false
    },
@@ -109,7 +97,7 @@
        "            // append a div with our uuid so we can check that it's already\n",
        "            // been sent and avoid duplicates on page reload\n",
        "            var notifiedDiv = document.createElement(\"div\")\n",
-       "            notifiedDiv.id = \"9d9cce8a-9af9-46a3-9e10-b0aea453731e\"\n",
+       "            notifiedDiv.id = \"f720591a-57b3-4d55-b8b0-9a626017bc46\"\n",
        "            element.append(notifiedDiv)\n",
        "        }\n",
        "\n",
@@ -119,7 +107,7 @@
        "        if (document.readyState === 'complete') {\n",
        "            // check for the div that signifies that the notification\n",
        "            // was already sent\n",
-       "            if (document.getElementById(\"9d9cce8a-9af9-46a3-9e10-b0aea453731e\") === null) {\n",
+       "            if (document.getElementById(\"f720591a-57b3-4d55-b8b0-9a626017bc46\") === null) {\n",
        "                var notificationPayload = {\"requireInteraction\": false, \"icon\": \"/static/base/images/favicon.ico\", \"body\": \"Cell execution has finished!\"};\n",
        "                if (Notification.permission !== 'denied') {\n",
        "                    if (Notification.permission !== 'granted') { \n",
@@ -166,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {
     "scrolled": false
    },
@@ -224,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {
     "scrolled": true
    },
@@ -305,7 +293,7 @@
        "4  2010  Nonpartisan  out-of-state     136,753.70"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "metadata": {
     "scrolled": false
    },
@@ -473,7 +461,7 @@
        "4                 7,944.09          nan  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "metadata": {
     "scrolled": false
    },
@@ -510,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "metadata": {
     "scrolled": false
    },
@@ -634,7 +622,7 @@
        "4             0.00          0.00      28,042.01         7,944.09         0.00  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -658,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "metadata": {
     "scrolled": false
    },
@@ -679,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 35,
    "metadata": {
     "scrolled": true
    },
@@ -956,7 +944,7 @@
        "4             nan              nan                  nan             nan  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -990,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 36,
    "metadata": {
     "scrolled": true
    },
@@ -1071,7 +1059,7 @@
        "4  2010          STATE HOUSE/ASSEMBLY  out-of-state  25,432,604.27"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1092,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1207,7 +1195,7 @@
        "2            197,083,965.16 24,722,638.46 3,241,309.78  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1228,7 +1216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 38,
    "metadata": {
     "scrolled": false
    },
@@ -1327,7 +1315,7 @@
        "2    24,722,638.46 3,241,309.78  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1351,7 +1339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 39,
    "metadata": {
     "scrolled": false
    },
@@ -1462,7 +1450,7 @@
        "2 165,266,258.91    17,461,311.31   735,907.25 183,463,477.47  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1486,7 +1474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1636,7 +1624,7 @@
        "2             0.88                 0.11            0.01  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1664,7 +1652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 41,
    "metadata": {
     "scrolled": false
    },
@@ -1714,7 +1702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 42,
    "metadata": {
     "scrolled": true
    },
@@ -1796,7 +1784,7 @@
        "5                  Y       unknown    12,845,753.15"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1815,7 +1803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 43,
    "metadata": {
     "scrolled": false
    },
@@ -1878,7 +1866,7 @@
        "1                             Y 1,098,799,035.17 131,098,940.91 12,845,753.15"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1897,7 +1885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 44,
    "metadata": {
     "scrolled": false
    },
@@ -1954,7 +1942,7 @@
        "1                  Y 1,098,799,035.17 131,098,940.91 12,845,753.15"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1975,7 +1963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 45,
    "metadata": {
     "scrolled": false
    },
@@ -1993,7 +1981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 46,
    "metadata": {
     "scrolled": true
    },
@@ -2066,7 +2054,7 @@
        "1 1,242,743,729.23          0.88              0.11         0.01  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2094,7 +2082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 47,
    "metadata": {
     "scrolled": true
    },
@@ -2279,7 +2267,7 @@
        "17  2018      DID NOT ADVANCE       unknown   6,103,905.99"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2298,7 +2286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 48,
    "metadata": {
     "scrolled": false
    },
@@ -2399,7 +2387,7 @@
        "1             43,718,516.27  6,103,905.99  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2418,7 +2406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 49,
    "metadata": {
     "scrolled": false
    },
@@ -2501,7 +2489,7 @@
        "1    43,718,516.27  6,103,905.99  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2525,7 +2513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 50,
    "metadata": {
     "scrolled": false
    },
@@ -2546,7 +2534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 51,
    "metadata": {
     "scrolled": true
    },
@@ -2737,7 +2725,7 @@
        "1            0.00  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2764,7 +2752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 52,
    "metadata": {
     "scrolled": false
    },
@@ -2772,6 +2760,7 @@
    "source": [
     "writer = pd.ExcelWriter(\"data/national_analysis.xlsx\")\n",
     "contributions_by_party.to_excel(writer, \"contributions_by_party\", index=False)\n",
+    "contributions_by_office.to_excel(writer, \"contributions_by_office\", index=False)\n",
     "contributions_by_redistricting.to_excel(writer, \"contributions_by_redistricting\", index=False)\n",
     "contributions_by_status.to_excel(writer, \"contributions_by_status\", index=False)\n",
     "writer.save()"
