--- a/candidates-analysis.ipynb
+++ b/candidates-analysis.ipynb
@@ -79,7 +79,7 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 6130104 entries, 0 to 6130103\n",
+      "RangeIndex: 6362352 entries, 0 to 6362351\n",
       "Data columns (total 19 columns):\n",
       "candidate                 object\n",
       "candidate_id              int64\n",
@@ -101,7 +101,7 @@
       "standardized_status       object\n",
       "two_year_term             object\n",
       "dtypes: float64(1), int64(2), object(16)\n",
-      "memory usage: 888.6+ MB\n"
+      "memory usage: 922.3+ MB\n"
      ]
     },
     {
@@ -113,7 +113,7 @@
        "            // append a div with our uuid so we can check that it's already\n",
        "            // been sent and avoid duplicates on page reload\n",
        "            var notifiedDiv = document.createElement(\"div\")\n",
-       "            notifiedDiv.id = \"3ae7afed-5406-4dc4-99ff-b92d89162168\"\n",
+       "            notifiedDiv.id = \"306fab4d-b6e7-42d0-b90d-c9600731c61b\"\n",
        "            element.append(notifiedDiv)\n",
        "        }\n",
        "\n",
@@ -123,7 +123,7 @@
        "        if (document.readyState === 'complete') {\n",
        "            // check for the div that signifies that the notification\n",
        "            // was already sent\n",
-       "            if (document.getElementById(\"3ae7afed-5406-4dc4-99ff-b92d89162168\") === null) {\n",
+       "            if (document.getElementById(\"306fab4d-b6e7-42d0-b90d-c9600731c61b\") === null) {\n",
        "                var notificationPayload = {\"requireInteraction\": false, \"icon\": \"/static/base/images/favicon.ico\", \"body\": \"Cell execution has finished!\"};\n",
        "                if (Notification.permission !== 'denied') {\n",
        "                    if (Notification.permission !== 'granted') { \n",
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -180,7 +180,7 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 6130104 entries, 0 to 6130103\n",
+      "RangeIndex: 6362352 entries, 0 to 6362351\n",
       "Data columns (total 19 columns):\n",
       "candidate                 object\n",
       "candidate_id              int64\n",
@@ -202,7 +202,7 @@
       "standardized_status       object\n",
       "two_year_term             object\n",
       "dtypes: datetime64[ns](2), float64(1), int64(2), object(14)\n",
-      "memory usage: 888.6+ MB\n"
+      "memory usage: 922.3+ MB\n"
      ]
     }
    ],
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -389,7 +389,7 @@
        "      <th>candidate</th>\n",
        "      <th>state</th>\n",
        "      <th>standardized_office_18</th>\n",
-       "      <th>standardized_status_x</th>\n",
+       "      <th>18_standardized_status</th>\n",
        "      <th>redistricting_role</th>\n",
        "      <th>amount_18_in_state</th>\n",
        "      <th>amount_18_out_of_state</th>\n",
@@ -398,7 +398,7 @@
        "      <th>pct_18_out_of_state</th>\n",
        "      <th>pct_18_unknown</th>\n",
        "      <th>standardized_office_14</th>\n",
-       "      <th>standardized_status_y</th>\n",
+       "      <th>14_standardized_status</th>\n",
        "      <th>amount_14_in_state</th>\n",
        "      <th>amount_14_out_of_state</th>\n",
        "      <th>amount_14_unknown</th>\n",
@@ -418,6 +418,36 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>ABBATE, PETER</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>STATE HOUSE/ASSEMBLY</td>\n",
+       "      <td>ADVANCED TO GENERAL</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>183,575.00</td>\n",
+       "      <td>18,350.00</td>\n",
+       "      <td>31,925.00</td>\n",
+       "      <td>0.79</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>0.14</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>nan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
        "      <td>ABBOTT, DAVID H</td>\n",
        "      <td>IN</td>\n",
        "      <td>STATE HOUSE/ASSEMBLY</td>\n",
@@ -447,7 +477,7 @@
        "      <td>nan</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>2</th>\n",
        "      <td>ABBOTT, GREG</td>\n",
        "      <td>TX</td>\n",
        "      <td>GOVERNOR/LIEUTENANT GOVERNOR</td>\n",
@@ -477,7 +507,7 @@
        "      <td>nan</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>3</th>\n",
        "      <td>ABDUL-RAHIM, ANEES</td>\n",
        "      <td>MD</td>\n",
        "      <td>STATE HOUSE/ASSEMBLY</td>\n",
@@ -507,7 +537,7 @@
        "      <td>nan</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>4</th>\n",
        "      <td>ABERCROMBIE, CATHERINE F</td>\n",
        "      <td>CT</td>\n",
        "      <td>STATE HOUSE/ASSEMBLY</td>\n",
@@ -536,106 +566,76 @@
        "      <td>nan</td>\n",
        "      <td>nan</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>ABINANTI, THOMAS J</td>\n",
-       "      <td>NY</td>\n",
-       "      <td>STATE HOUSE/ASSEMBLY</td>\n",
-       "      <td>DID NOT ADVANCE</td>\n",
-       "      <td>Y</td>\n",
-       "      <td>14,700.00</td>\n",
-       "      <td>100.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.99</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>STATE HOUSE/ASSEMBLY</td>\n",
-       "      <td>ADVANCED TO GENERAL</td>\n",
-       "      <td>12,700.00</td>\n",
-       "      <td>1,500.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.89</td>\n",
-       "      <td>0.11</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>STATE HOUSE/ASSEMBLY</td>\n",
-       "      <td>ADVANCED TO GENERAL</td>\n",
-       "      <td>64,265.00</td>\n",
-       "      <td>300.00</td>\n",
-       "      <td>100.00</td>\n",
-       "      <td>0.99</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
        "                  candidate state        standardized_office_18  \\\n",
-       "0           ABBOTT, DAVID H    IN          STATE HOUSE/ASSEMBLY   \n",
-       "1              ABBOTT, GREG    TX  GOVERNOR/LIEUTENANT GOVERNOR   \n",
-       "2        ABDUL-RAHIM, ANEES    MD          STATE HOUSE/ASSEMBLY   \n",
-       "3  ABERCROMBIE, CATHERINE F    CT          STATE HOUSE/ASSEMBLY   \n",
-       "4        ABINANTI, THOMAS J    NY          STATE HOUSE/ASSEMBLY   \n",
+       "0             ABBATE, PETER    NY          STATE HOUSE/ASSEMBLY   \n",
+       "1           ABBOTT, DAVID H    IN          STATE HOUSE/ASSEMBLY   \n",
+       "2              ABBOTT, GREG    TX  GOVERNOR/LIEUTENANT GOVERNOR   \n",
+       "3        ABDUL-RAHIM, ANEES    MD          STATE HOUSE/ASSEMBLY   \n",
+       "4  ABERCROMBIE, CATHERINE F    CT          STATE HOUSE/ASSEMBLY   \n",
        "\n",
-       "  standardized_status_x redistricting_role  amount_18_in_state  \\\n",
-       "0   ADVANCED TO GENERAL                  Y           26,065.00   \n",
-       "1   ADVANCED TO GENERAL                  Y       59,614,107.87   \n",
-       "2       DID NOT ADVANCE                  Y            8,841.07   \n",
-       "3   ADVANCED TO GENERAL                  N            2,485.00   \n",
-       "4       DID NOT ADVANCE                  Y           14,700.00   \n",
+       "  18_standardized_status redistricting_role  amount_18_in_state  \\\n",
+       "0    ADVANCED TO GENERAL                  Y          183,575.00   \n",
+       "1    ADVANCED TO GENERAL                  Y           26,065.00   \n",
+       "2    ADVANCED TO GENERAL                  Y       59,614,107.87   \n",
+       "3        DID NOT ADVANCE                  Y            8,841.07   \n",
+       "4    ADVANCED TO GENERAL                  N            2,485.00   \n",
        "\n",
        "   amount_18_out_of_state  amount_18_unknown  pct_18_in_state  \\\n",
-       "0                    0.00               0.00             1.00   \n",
-       "1            4,528,077.58           1,020.00             0.93   \n",
-       "2                    0.00               0.00             1.00   \n",
+       "0               18,350.00          31,925.00             0.79   \n",
+       "1                    0.00               0.00             1.00   \n",
+       "2            4,528,077.58           1,020.00             0.93   \n",
        "3                    0.00               0.00             1.00   \n",
-       "4                  100.00               0.00             0.99   \n",
+       "4                    0.00               0.00             1.00   \n",
        "\n",
        "   pct_18_out_of_state  pct_18_unknown        standardized_office_14  \\\n",
-       "0                 0.00            0.00                           NaN   \n",
-       "1                 0.07            0.00  GOVERNOR/LIEUTENANT GOVERNOR   \n",
-       "2                 0.00            0.00                           NaN   \n",
-       "3                 0.00            0.00          STATE HOUSE/ASSEMBLY   \n",
-       "4                 0.01            0.00          STATE HOUSE/ASSEMBLY   \n",
+       "0                 0.08            0.14                           NaN   \n",
+       "1                 0.00            0.00                           NaN   \n",
+       "2                 0.07            0.00  GOVERNOR/LIEUTENANT GOVERNOR   \n",
+       "3                 0.00            0.00                           NaN   \n",
+       "4                 0.00            0.00          STATE HOUSE/ASSEMBLY   \n",
        "\n",
-       "  standardized_status_y  amount_14_in_state  amount_14_out_of_state  \\\n",
-       "0                   NaN                 nan                     nan   \n",
-       "1   ADVANCED TO GENERAL       22,988,410.36            1,488,413.64   \n",
-       "2                   NaN                 nan                     nan   \n",
-       "3   ADVANCED TO GENERAL            5,130.00                    7.00   \n",
-       "4   ADVANCED TO GENERAL           12,700.00                1,500.00   \n",
+       "  14_standardized_status  amount_14_in_state  amount_14_out_of_state  \\\n",
+       "0                    NaN                 nan                     nan   \n",
+       "1                    NaN                 nan                     nan   \n",
+       "2    ADVANCED TO GENERAL       22,988,410.36            1,488,413.64   \n",
+       "3                    NaN                 nan                     nan   \n",
+       "4    ADVANCED TO GENERAL            5,130.00                    7.00   \n",
        "\n",
        "   amount_14_unknown  pct_14_in_state  pct_14_out_of_state  pct_14_unknown  \\\n",
        "0                nan              nan                  nan             nan   \n",
-       "1       4,791,017.12             0.79                 0.05            0.16   \n",
-       "2                nan              nan                  nan             nan   \n",
-       "3              20.00             0.99                 0.00            0.00   \n",
-       "4               0.00             0.89                 0.11            0.00   \n",
+       "1                nan              nan                  nan             nan   \n",
+       "2       4,791,017.12             0.79                 0.05            0.16   \n",
+       "3                nan              nan                  nan             nan   \n",
+       "4              20.00             0.99                 0.00            0.00   \n",
        "\n",
-       "  standardized_office_10  standardized_status  amount_10_in_state  \\\n",
-       "0                    NaN                  NaN                 nan   \n",
-       "1                    NaN                  NaN                 nan   \n",
-       "2                    NaN                  NaN                 nan   \n",
-       "3                    NaN                  NaN                 nan   \n",
-       "4   STATE HOUSE/ASSEMBLY  ADVANCED TO GENERAL           64,265.00   \n",
+       "  standardized_office_10 standardized_status  amount_10_in_state  \\\n",
+       "0                    NaN                 NaN                 nan   \n",
+       "1                    NaN                 NaN                 nan   \n",
+       "2                    NaN                 NaN                 nan   \n",
+       "3                    NaN                 NaN                 nan   \n",
+       "4                    NaN                 NaN                 nan   \n",
        "\n",
        "   amount_10_out_of_state  amount_10_unknown  pct_10_in_state  \\\n",
        "0                     nan                nan              nan   \n",
        "1                     nan                nan              nan   \n",
        "2                     nan                nan              nan   \n",
        "3                     nan                nan              nan   \n",
-       "4                  300.00             100.00             0.99   \n",
+       "4                     nan                nan              nan   \n",
        "\n",
        "   pct_10_out_of_state  pct_10_unknown  \n",
        "0                  nan             nan  \n",
        "1                  nan             nan  \n",
        "2                  nan             nan  \n",
        "3                  nan             nan  \n",
-       "4                 0.00            0.00  "
+       "4                  nan             nan  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -644,7 +644,7 @@
     "list_of_contributions_by_candidate = [contributions_by_candidate_18, contributions_by_candidate_14, contributions_by_candidate_10]\n",
     "contributions_by_candidate = reduce(lambda left, right: pd.merge(left, right, on=[\"candidate\", \"state\"], how=\"outer\"), list_of_contributions_by_candidate)\n",
     "contributions_by_candidate.drop([\"year_x\", \"year_y\", \"year\"], axis=1, inplace=True)\n",
-    "contributions_by_candidate.rename(columns={\"standardized_status_x\": \"18_standardized_status\", \"standardized_status_y\": \"14_standardized_status\"})\n",
+    "contributions_by_candidate.rename(columns={\"standardized_status_x\": \"standardized_status_18\", \"standardized_status_y\": \"standardized_status_14\"}, inplace=True)\n",
     "contributions_by_candidate.head()"
    ]
   },
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +671,7 @@
        "            // append a div with our uuid so we can check that it's already\n",
        "            // been sent and avoid duplicates on page reload\n",
        "            var notifiedDiv = document.createElement(\"div\")\n",
-       "            notifiedDiv.id = \"b9aef3cd-39b8-4d63-a225-e465d0466a80\"\n",
+       "            notifiedDiv.id = \"f271d656-55c8-484e-962b-cf9e336647be\"\n",
        "            element.append(notifiedDiv)\n",
        "        }\n",
        "\n",
@@ -681,7 +681,7 @@
        "        if (document.readyState === 'complete') {\n",
        "            // check for the div that signifies that the notification\n",
        "            // was already sent\n",
-       "            if (document.getElementById(\"b9aef3cd-39b8-4d63-a225-e465d0466a80\") === null) {\n",
+       "            if (document.getElementById(\"f271d656-55c8-484e-962b-cf9e336647be\") === null) {\n",
        "                var notificationPayload = {\"requireInteraction\": false, \"icon\": \"/static/base/images/favicon.ico\", \"body\": \"Cell execution has finished!\"};\n",
        "                if (Notification.permission !== 'denied') {\n",
        "                    if (Notification.permission !== 'granted') { \n",
