--- a/candidates-analysis.ipynb
+++ b/candidates-analysis.ipynb
@@ -113,7 +113,7 @@
        "            // append a div with our uuid so we can check that it's already\n",
        "            // been sent and avoid duplicates on page reload\n",
        "            var notifiedDiv = document.createElement(\"div\")\n",
-       "            notifiedDiv.id = \"306fab4d-b6e7-42d0-b90d-c9600731c61b\"\n",
+       "            notifiedDiv.id = \"9622dbbb-49f6-41d3-90c5-cb669f825800\"\n",
        "            element.append(notifiedDiv)\n",
        "        }\n",
        "\n",
@@ -123,7 +123,7 @@
        "        if (document.readyState === 'complete') {\n",
        "            // check for the div that signifies that the notification\n",
        "            // was already sent\n",
-       "            if (document.getElementById(\"306fab4d-b6e7-42d0-b90d-c9600731c61b\") === null) {\n",
+       "            if (document.getElementById(\"9622dbbb-49f6-41d3-90c5-cb669f825800\") === null) {\n",
        "                var notificationPayload = {\"requireInteraction\": false, \"icon\": \"/static/base/images/favicon.ico\", \"body\": \"Cell execution has finished!\"};\n",
        "                if (Notification.permission !== 'denied') {\n",
        "                    if (Notification.permission !== 'granted') { \n",
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -389,7 +389,7 @@
        "      <th>candidate</th>\n",
        "      <th>state</th>\n",
        "      <th>standardized_office_18</th>\n",
-       "      <th>18_standardized_status</th>\n",
+       "      <th>standardized_status_18</th>\n",
        "      <th>redistricting_role</th>\n",
        "      <th>amount_18_in_state</th>\n",
        "      <th>amount_18_out_of_state</th>\n",
@@ -398,7 +398,7 @@
        "      <th>pct_18_out_of_state</th>\n",
        "      <th>pct_18_unknown</th>\n",
        "      <th>standardized_office_14</th>\n",
-       "      <th>14_standardized_status</th>\n",
+       "      <th>standardized_status_14</th>\n",
        "      <th>amount_14_in_state</th>\n",
        "      <th>amount_14_out_of_state</th>\n",
        "      <th>amount_14_unknown</th>\n",
@@ -578,7 +578,7 @@
        "3        ABDUL-RAHIM, ANEES    MD          STATE HOUSE/ASSEMBLY   \n",
        "4  ABERCROMBIE, CATHERINE F    CT          STATE HOUSE/ASSEMBLY   \n",
        "\n",
-       "  18_standardized_status redistricting_role  amount_18_in_state  \\\n",
+       "  standardized_status_18 redistricting_role  amount_18_in_state  \\\n",
        "0    ADVANCED TO GENERAL                  Y          183,575.00   \n",
        "1    ADVANCED TO GENERAL                  Y           26,065.00   \n",
        "2    ADVANCED TO GENERAL                  Y       59,614,107.87   \n",
@@ -599,7 +599,7 @@
        "3                 0.00            0.00                           NaN   \n",
        "4                 0.00            0.00          STATE HOUSE/ASSEMBLY   \n",
        "\n",
-       "  14_standardized_status  amount_14_in_state  amount_14_out_of_state  \\\n",
+       "  standardized_status_14  amount_14_in_state  amount_14_out_of_state  \\\n",
        "0                    NaN                 nan                     nan   \n",
        "1                    NaN                 nan                     nan   \n",
        "2    ADVANCED TO GENERAL       22,988,410.36            1,488,413.64   \n",
@@ -635,7 +635,7 @@
        "4                  nan             nan  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -671,7 +671,7 @@
        "            // append a div with our uuid so we can check that it's already\n",
        "            // been sent and avoid duplicates on page reload\n",
        "            var notifiedDiv = document.createElement(\"div\")\n",
-       "            notifiedDiv.id = \"f271d656-55c8-484e-962b-cf9e336647be\"\n",
+       "            notifiedDiv.id = \"57cb9719-b57a-4990-829f-92f0e886cdb4\"\n",
        "            element.append(notifiedDiv)\n",
        "        }\n",
        "\n",
@@ -681,7 +681,7 @@
        "        if (document.readyState === 'complete') {\n",
        "            // check for the div that signifies that the notification\n",
        "            // was already sent\n",
-       "            if (document.getElementById(\"f271d656-55c8-484e-962b-cf9e336647be\") === null) {\n",
+       "            if (document.getElementById(\"57cb9719-b57a-4990-829f-92f0e886cdb4\") === null) {\n",
        "                var notificationPayload = {\"requireInteraction\": false, \"icon\": \"/static/base/images/favicon.ico\", \"body\": \"Cell execution has finished!\"};\n",
        "                if (Notification.permission !== 'denied') {\n",
        "                    if (Notification.permission !== 'granted') { \n",
