--- a/data-prep.ipynb
+++ b/data-prep.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -99,8 +99,8 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 9115196 entries, 0 to 9115195\n",
-      "Data columns (total 11 columns):\n",
+      "RangeIndex: 9153076 entries, 0 to 9153075\n",
+      "Data columns (total 15 columns):\n",
       "candidate_id       int64\n",
       "candidate          object\n",
       "election_status    object\n",
@@ -111,9 +111,13 @@
       "contributor        object\n",
       "amount             object\n",
       "date               object\n",
+      "street             object\n",
+      "city               object\n",
+      "state              object\n",
+      "zip                float64\n",
       "in_out_state       float64\n",
-      "dtypes: float64(1), int64(2), object(8)\n",
-      "memory usage: 765.0+ MB\n"
+      "dtypes: float64(2), int64(2), object(11)\n",
+      "memory usage: 1.0+ GB\n"
      ]
     },
     {
@@ -125,7 +129,7 @@
        "            // append a div with our uuid so we can check that it's already\n",
        "            // been sent and avoid duplicates on page reload\n",
        "            var notifiedDiv = document.createElement(\"div\")\n",
-       "            notifiedDiv.id = \"52cff379-41f7-4b1b-97bb-12659f9f4e8d\"\n",
+       "            notifiedDiv.id = \"152331d0-2fad-4054-ae0f-84a93b50760f\"\n",
        "            element.append(notifiedDiv)\n",
        "        }\n",
        "\n",
@@ -135,7 +139,7 @@
        "        if (document.readyState === 'complete') {\n",
        "            // check for the div that signifies that the notification\n",
        "            // was already sent\n",
-       "            if (document.getElementById(\"52cff379-41f7-4b1b-97bb-12659f9f4e8d\") === null) {\n",
+       "            if (document.getElementById(\"152331d0-2fad-4054-ae0f-84a93b50760f\") === null) {\n",
        "                var notificationPayload = {\"requireInteraction\": false, \"icon\": \"/static/base/images/favicon.ico\", \"body\": \"Cell execution has finished!\"};\n",
        "                if (Notification.permission !== 'denied') {\n",
        "                    if (Notification.permission !== 'granted') { \n",
@@ -169,14 +173,14 @@
    ],
    "source": [
     "%%notify\n",
-    "contributions = pd.read_csv(\"data/raw/contributions.csv\", usecols=[\"Candidate:id\", \"Candidate\", \"Election_Status\", \"General_Party\", \"Election_Jurisdiction\", \"Election_Year\", \"Office_Sought\", \"Contributor\", \"Amount\", \"Date\", \"In-State\"], error_bad_lines=False)\n",
-    "contributions.columns = [\"candidate_id\", \"candidate\", \"election_status\", \"party\", \"state\", \"year\", \"office\", \"contributor\", \"amount\", \"date\", \"in_out_state\"]\n",
+    "contributions = pd.read_csv(\"data/raw/contributions.csv\", usecols=[\"Candidate:id\", \"Candidate\", \"Election_Status\", \"General_Party\", \"Election_Jurisdiction\", \"Election_Year\", \"Office_Sought\", \"Contributor\", \"Amount\", \"Date\", \"Street\", \"City\", \"State\", \"Zip\", \"In-State\"], error_bad_lines=False)\n",
+    "contributions.columns = [\"candidate_id\", \"candidate\", \"election_status\", \"party\", \"state\", \"year\", \"office\", \"contributor\", \"amount\", \"date\", \"street\", \"city\", \"state\", \"zip\", \"in_out_state\"]\n",
     "contributions.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +196,7 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 2598111 entries, 0 to 2598110\n",
+      "RangeIndex: 2635991 entries, 0 to 2635990\n",
       "Data columns (total 11 columns):\n",
       "candidate_id       int64\n",
       "candidate          object\n",
@@ -206,7 +210,7 @@
       "date               object\n",
       "in_out_state       float64\n",
       "dtypes: float64(1), int64(2), object(8)\n",
-      "memory usage: 218.0+ MB\n"
+      "memory usage: 221.2+ MB\n"
      ]
     }
    ],
@@ -237,8 +241,8 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 9115196 entries, 0 to 9115195\n",
-      "Data columns (total 11 columns):\n",
+      "RangeIndex: 9153076 entries, 0 to 9153075\n",
+      "Data columns (total 15 columns):\n",
       "candidate_id       int64\n",
       "candidate          object\n",
       "election_status    object\n",
@@ -249,9 +253,13 @@
       "contributor        object\n",
       "amount             float64\n",
       "date               datetime64[ns]\n",
+      "street             object\n",
+      "city               object\n",
+      "state              object\n",
+      "zip                float64\n",
       "in_out_state       float64\n",
-      "dtypes: datetime64[ns](1), float64(2), int64(2), object(6)\n",
-      "memory usage: 765.0+ MB\n"
+      "dtypes: datetime64[ns](1), float64(3), int64(2), object(9)\n",
+      "memory usage: 1.0+ GB\n"
      ]
     }
    ],
@@ -278,8 +286,8 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 8969741 entries, 0 to 9115195\n",
-      "Data columns (total 11 columns):\n",
+      "Int64Index: 9007598 entries, 0 to 9153075\n",
+      "Data columns (total 15 columns):\n",
       "candidate_id       int64\n",
       "candidate          object\n",
       "election_status    object\n",
@@ -290,9 +298,13 @@
       "contributor        object\n",
       "amount             float64\n",
       "date               datetime64[ns]\n",
+      "street             object\n",
+      "city               object\n",
+      "state              object\n",
+      "zip                float64\n",
       "in_out_state       float64\n",
-      "dtypes: datetime64[ns](1), float64(2), int64(2), object(6)\n",
-      "memory usage: 821.2+ MB\n"
+      "dtypes: datetime64[ns](1), float64(3), int64(2), object(9)\n",
+      "memory usage: 1.1+ GB\n"
      ]
     }
    ],
@@ -318,8 +330,8 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 8958470 entries, 0 to 8958469\n",
-      "Data columns (total 11 columns):\n",
+      "Int64Index: 8996016 entries, 0 to 8996015\n",
+      "Data columns (total 15 columns):\n",
       "candidate_id       int64\n",
       "candidate          object\n",
       "election_status    object\n",
@@ -330,9 +342,13 @@
       "contributor        object\n",
       "amount             float64\n",
       "date               datetime64[ns]\n",
+      "street             object\n",
+      "city               object\n",
+      "state              object\n",
+      "zip                float64\n",
       "in_out_state       float64\n",
-      "dtypes: datetime64[ns](1), float64(2), int64(2), object(6)\n",
-      "memory usage: 820.2+ MB\n"
+      "dtypes: datetime64[ns](1), float64(3), int64(2), object(9)\n",
+      "memory usage: 1.1+ GB\n"
      ]
     }
    ],
@@ -363,9 +379,9 @@
      "data": {
       "text/plain": [
        "in_out_state\n",
-       "in-state        7546891\n",
-       "out-of-state    1282962\n",
-       "unknown          128615\n",
+       "in-state        7568757\n",
+       "out-of-state    1298298\n",
+       "unknown          128959\n",
        "dtype: int64"
       ]
      },
@@ -396,9 +412,9 @@
      "data": {
       "text/plain": [
        "standardized_office\n",
-       "GOVERNOR/LIEUTENANT GOVERNOR    3806809\n",
-       "STATE HOUSE/ASSEMBLY            3436532\n",
-       "STATE SENATE                    1715129\n",
+       "GOVERNOR/LIEUTENANT GOVERNOR    3828901\n",
+       "STATE HOUSE/ASSEMBLY            3447248\n",
+       "STATE SENATE                    1719867\n",
        "dtype: int64"
       ]
      },
@@ -415,7 +431,7 @@
        "            // append a div with our uuid so we can check that it's already\n",
        "            // been sent and avoid duplicates on page reload\n",
        "            var notifiedDiv = document.createElement(\"div\")\n",
-       "            notifiedDiv.id = \"92ae5b67-4d42-46e3-8ba9-9d52c7d65164\"\n",
+       "            notifiedDiv.id = \"64272e89-af66-4026-a71e-1332aa65ef47\"\n",
        "            element.append(notifiedDiv)\n",
        "        }\n",
        "\n",
@@ -425,7 +441,7 @@
        "        if (document.readyState === 'complete') {\n",
        "            // check for the div that signifies that the notification\n",
        "            // was already sent\n",
-       "            if (document.getElementById(\"92ae5b67-4d42-46e3-8ba9-9d52c7d65164\") === null) {\n",
+       "            if (document.getElementById(\"64272e89-af66-4026-a71e-1332aa65ef47\") === null) {\n",
        "                var notificationPayload = {\"requireInteraction\": false, \"icon\": \"/static/base/images/favicon.ico\", \"body\": \"Cell execution has finished!\"};\n",
        "                if (Notification.permission !== 'denied') {\n",
        "                    if (Notification.permission !== 'granted') { \n",
@@ -482,8 +498,8 @@
      "data": {
       "text/plain": [
        "standardized_status\n",
-       "ADVANCED TO GENERAL    7651617\n",
-       "DID NOT ADVANCE        1306853\n",
+       "ADVANCED TO GENERAL    7685396\n",
+       "DID NOT ADVANCE        1310620\n",
        "dtype: int64"
       ]
      },
@@ -500,7 +516,7 @@
        "            // append a div with our uuid so we can check that it's already\n",
        "            // been sent and avoid duplicates on page reload\n",
        "            var notifiedDiv = document.createElement(\"div\")\n",
-       "            notifiedDiv.id = \"16c2ec88-4028-4f02-942c-f7e0c4fbbc2f\"\n",
+       "            notifiedDiv.id = \"c3e26381-c72b-4590-8f41-468b6a14c074\"\n",
        "            element.append(notifiedDiv)\n",
        "        }\n",
        "\n",
@@ -510,7 +526,7 @@
        "        if (document.readyState === 'complete') {\n",
        "            // check for the div that signifies that the notification\n",
        "            // was already sent\n",
-       "            if (document.getElementById(\"16c2ec88-4028-4f02-942c-f7e0c4fbbc2f\") === null) {\n",
+       "            if (document.getElementById(\"c3e26381-c72b-4590-8f41-468b6a14c074\") === null) {\n",
        "                var notificationPayload = {\"requireInteraction\": false, \"icon\": \"/static/base/images/favicon.ico\", \"body\": \"Cell execution has finished!\"};\n",
        "                if (Notification.permission !== 'denied') {\n",
        "                    if (Notification.permission !== 'granted') { \n",
@@ -556,6 +572,16 @@
     "                                       np.where(contributions[\"election_status\"].isin(did_not_advance),\n",
     "                                                \"DID NOT ADVANCE\", \"\"))\n",
     "contributions.groupby(\"standardized_status\").size()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "glasson_stansbury_contributions = contributions[(contributions[\"candidate\"].str.contains(\"Stansbury\", case=False)) | (contributions[\"candidate\"].str.contains(\"Glasson\", case=False))]\n",
+    "glasson_stansbury_contributions.to_excel(\"glasson_stansbury_contributions.xlsx\", index=False)"
    ]
   },
   {
