--- a/candidates-analysis.ipynb
+++ b/candidates-analysis.ipynb
@@ -70,7 +70,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/joe/anaconda3/lib/python3.6/site-packages/IPython/core/interactiveshell.py:2728: DtypeWarning: Columns (10,13,14,15,18) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/home/jyerardi/anaconda3/lib/python3.6/site-packages/IPython/core/interactiveshell.py:2698: DtypeWarning: Columns (14,17,18,19,22) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  interactivity=interactivity, compiler=compiler, result=result)\n"
      ]
     },
@@ -79,8 +79,8 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 6362352 entries, 0 to 6362351\n",
-      "Data columns (total 19 columns):\n",
+      "RangeIndex: 6514274 entries, 0 to 6514273\n",
+      "Data columns (total 23 columns):\n",
       "candidate                 object\n",
       "candidate_id              int64\n",
       "year                      int64\n",
@@ -90,6 +90,10 @@
       "contributor               object\n",
       "amount                    float64\n",
       "date                      object\n",
+      "contributor_street        object\n",
+      "contributor_city          object\n",
+      "contributor_state         object\n",
+      "contributor_zip           float64\n",
       "in_out_state              object\n",
       "no_veto                   object\n",
       "office                    object\n",
@@ -100,8 +104,8 @@
       "standardized_office       object\n",
       "standardized_status       object\n",
       "two_year_term             object\n",
-      "dtypes: float64(1), int64(2), object(16)\n",
-      "memory usage: 922.3+ MB\n"
+      "dtypes: float64(2), int64(2), object(19)\n",
+      "memory usage: 1.1+ GB\n"
      ]
     },
     {
@@ -113,7 +117,7 @@
        "            // append a div with our uuid so we can check that it's already\n",
        "            // been sent and avoid duplicates on page reload\n",
        "            var notifiedDiv = document.createElement(\"div\")\n",
-       "            notifiedDiv.id = \"9622dbbb-49f6-41d3-90c5-cb669f825800\"\n",
+       "            notifiedDiv.id = \"8c63042b-a36b-4f81-8df1-912d1e66c063\"\n",
        "            element.append(notifiedDiv)\n",
        "        }\n",
        "\n",
@@ -123,7 +127,7 @@
        "        if (document.readyState === 'complete') {\n",
        "            // check for the div that signifies that the notification\n",
        "            // was already sent\n",
-       "            if (document.getElementById(\"9622dbbb-49f6-41d3-90c5-cb669f825800\") === null) {\n",
+       "            if (document.getElementById(\"8c63042b-a36b-4f81-8df1-912d1e66c063\") === null) {\n",
        "                var notificationPayload = {\"requireInteraction\": false, \"icon\": \"/static/base/images/favicon.ico\", \"body\": \"Cell execution has finished!\"};\n",
        "                if (Notification.permission !== 'denied') {\n",
        "                    if (Notification.permission !== 'granted') { \n",
@@ -180,8 +184,8 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 6362352 entries, 0 to 6362351\n",
-      "Data columns (total 19 columns):\n",
+      "RangeIndex: 6514274 entries, 0 to 6514273\n",
+      "Data columns (total 23 columns):\n",
       "candidate                 object\n",
       "candidate_id              int64\n",
       "year                      int64\n",
@@ -191,6 +195,10 @@
       "contributor               object\n",
       "amount                    float64\n",
       "date                      datetime64[ns]\n",
+      "contributor_street        object\n",
+      "contributor_city          object\n",
+      "contributor_state         object\n",
+      "contributor_zip           float64\n",
       "in_out_state              object\n",
       "no_veto                   object\n",
       "office                    object\n",
@@ -201,8 +209,8 @@
       "standardized_office       object\n",
       "standardized_status       object\n",
       "two_year_term             object\n",
-      "dtypes: datetime64[ns](2), float64(1), int64(2), object(14)\n",
-      "memory usage: 922.3+ MB\n"
+      "dtypes: datetime64[ns](2), float64(2), int64(2), object(17)\n",
+      "memory usage: 1.1+ GB\n"
      ]
     }
    ],
@@ -229,7 +237,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "contributions_18 = contributions[contributions[\"year\"] == 2018]\n",
@@ -248,6 +258,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -272,7 +283,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "contributions_by_candidate_18 = pd.pivot_table(contributions_by_candidate_18, index=[\"candidate\", \"state\", \"year\", \"standardized_office\", \"standardized_status\", \"redistricting_role\"], columns=[\"in_out_state\"]).reset_index()\n",
@@ -292,7 +305,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "contributions_by_candidate_18.fillna(0, inplace=True)\n",
@@ -312,7 +327,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "contributions_by_candidate_18.columns = [\"_\".join(column).replace(\"-\",\"_\").strip(\"_\") for column in contributions_by_candidate_18.columns.values]\n",
@@ -335,7 +352,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "contributions_by_candidate_18[\"pct_18_in_state\"] = contributions_by_candidate_18[\"amount_18_in_state\"] / (contributions_by_candidate_18[\"amount_18_in_state\"] + contributions_by_candidate_18[\"amount_18_out_of_state\"] + contributions_by_candidate_18[\"amount_18_unknown\"])\n",
@@ -420,7 +439,7 @@
        "      <th>0</th>\n",
        "      <td>ABBATE, PETER</td>\n",
        "      <td>NY</td>\n",
-       "      <td>STATE HOUSE/ASSEMBLY</td>\n",
+       "      <td>STATE HOUSE/ASSEMBLY/SENATE</td>\n",
        "      <td>ADVANCED TO GENERAL</td>\n",
        "      <td>Y</td>\n",
        "      <td>183,575.00</td>\n",
@@ -450,7 +469,7 @@
        "      <th>1</th>\n",
        "      <td>ABBOTT, DAVID H</td>\n",
        "      <td>IN</td>\n",
-       "      <td>STATE HOUSE/ASSEMBLY</td>\n",
+       "      <td>STATE HOUSE/ASSEMBLY/SENATE</td>\n",
        "      <td>ADVANCED TO GENERAL</td>\n",
        "      <td>Y</td>\n",
        "      <td>26,065.00</td>\n",
@@ -510,7 +529,7 @@
        "      <th>3</th>\n",
        "      <td>ABDUL-RAHIM, ANEES</td>\n",
        "      <td>MD</td>\n",
-       "      <td>STATE HOUSE/ASSEMBLY</td>\n",
+       "      <td>STATE HOUSE/ASSEMBLY/SENATE</td>\n",
        "      <td>DID NOT ADVANCE</td>\n",
        "      <td>Y</td>\n",
        "      <td>8,841.07</td>\n",
@@ -540,7 +559,7 @@
        "      <th>4</th>\n",
        "      <td>ABERCROMBIE, CATHERINE F</td>\n",
        "      <td>CT</td>\n",
-       "      <td>STATE HOUSE/ASSEMBLY</td>\n",
+       "      <td>STATE HOUSE/ASSEMBLY/SENATE</td>\n",
        "      <td>ADVANCED TO GENERAL</td>\n",
        "      <td>N</td>\n",
        "      <td>2,485.00</td>\n",
@@ -549,7 +568,7 @@
        "      <td>1.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>STATE HOUSE/ASSEMBLY</td>\n",
+       "      <td>STATE HOUSE/ASSEMBLY/SENATE</td>\n",
        "      <td>ADVANCED TO GENERAL</td>\n",
        "      <td>5,130.00</td>\n",
        "      <td>7.00</td>\n",
@@ -572,11 +591,11 @@
       ],
       "text/plain": [
        "                  candidate state        standardized_office_18  \\\n",
-       "0             ABBATE, PETER    NY          STATE HOUSE/ASSEMBLY   \n",
-       "1           ABBOTT, DAVID H    IN          STATE HOUSE/ASSEMBLY   \n",
+       "0             ABBATE, PETER    NY   STATE HOUSE/ASSEMBLY/SENATE   \n",
+       "1           ABBOTT, DAVID H    IN   STATE HOUSE/ASSEMBLY/SENATE   \n",
        "2              ABBOTT, GREG    TX  GOVERNOR/LIEUTENANT GOVERNOR   \n",
-       "3        ABDUL-RAHIM, ANEES    MD          STATE HOUSE/ASSEMBLY   \n",
-       "4  ABERCROMBIE, CATHERINE F    CT          STATE HOUSE/ASSEMBLY   \n",
+       "3        ABDUL-RAHIM, ANEES    MD   STATE HOUSE/ASSEMBLY/SENATE   \n",
+       "4  ABERCROMBIE, CATHERINE F    CT   STATE HOUSE/ASSEMBLY/SENATE   \n",
        "\n",
        "  standardized_status_18 redistricting_role  amount_18_in_state  \\\n",
        "0    ADVANCED TO GENERAL                  Y          183,575.00   \n",
@@ -597,7 +616,7 @@
        "1                 0.00            0.00                           NaN   \n",
        "2                 0.07            0.00  GOVERNOR/LIEUTENANT GOVERNOR   \n",
        "3                 0.00            0.00                           NaN   \n",
-       "4                 0.00            0.00          STATE HOUSE/ASSEMBLY   \n",
+       "4                 0.00            0.00   STATE HOUSE/ASSEMBLY/SENATE   \n",
        "\n",
        "  standardized_status_14  amount_14_in_state  amount_14_out_of_state  \\\n",
        "0                    NaN                 nan                     nan   \n",
@@ -671,7 +690,7 @@
        "            // append a div with our uuid so we can check that it's already\n",
        "            // been sent and avoid duplicates on page reload\n",
        "            var notifiedDiv = document.createElement(\"div\")\n",
-       "            notifiedDiv.id = \"57cb9719-b57a-4990-829f-92f0e886cdb4\"\n",
+       "            notifiedDiv.id = \"0bdf6247-3881-4b50-b8fb-3d3bdaac18ea\"\n",
        "            element.append(notifiedDiv)\n",
        "        }\n",
        "\n",
@@ -681,7 +700,7 @@
        "        if (document.readyState === 'complete') {\n",
        "            // check for the div that signifies that the notification\n",
        "            // was already sent\n",
-       "            if (document.getElementById(\"57cb9719-b57a-4990-829f-92f0e886cdb4\") === null) {\n",
+       "            if (document.getElementById(\"0bdf6247-3881-4b50-b8fb-3d3bdaac18ea\") === null) {\n",
        "                var notificationPayload = {\"requireInteraction\": false, \"icon\": \"/static/base/images/favicon.ico\", \"body\": \"Cell execution has finished!\"};\n",
        "                if (Notification.permission !== 'denied') {\n",
        "                    if (Notification.permission !== 'granted') { \n",
@@ -721,7 +740,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -742,7 +763,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
